# kursache

./: .gitignore  README.md  inner.md  plan.md  techQuest.md  update.md  Введение.md
book/: main.tex
book/0/: preambula.fdb_latexmk  preambula.fls  preambula.tex
book/4/: bibl.bib
chptr2/: p211.md  p212.md  p213.md  p214.md  p215.md  p221.md  p23.md
code/: CMakeLists.txt  Coincidence.cpp  Coincidence.h  ENV.h  Levenshtein.cpp  Levenshtein.h  Livenshtain.cpp  Text.cpp  Text.h  Word.cpp  Word.h  constants.h  main.cpp  update.md
code/algorithms/: algo.cpp  algo.h
code/resources/: text100.txt  text150.txt  text200.txt  text250.txt
code/src/: CMakeLists.txt  main.cpp
code/src/algo/: CMakeLists.txt  algo.cpp  encoders.cpp  hash.cpp  predictor.cpp
code/src/algo/include/algo/: algo.h  constants.h  encoders.h  hash.h  predictor.h
code/src/coincidence/: CMakeLists.txt  coincidence.cpp  preprocessed_coincidence.cpp
code/src/coincidence/algorithms/: CMakeLists.txt  algo.cpp  constants.cpp  hash.cpp  predictor.cpp
code/src/coincidence/algorithms/include/algo/: algo.h  constants.h  hash.h  predictor.h
code/src/coincidence/include/coincidence/: all.h  coincidence.h  preprocessed_coincidence.h
code/src/text/: CMakeLists.txt  grouped_text.cpp  text.cpp  utils.cpp  word.cpp
code/src/text/include/text/: constants.h  grouped_text.h  text.h  utils.h  word.h
code/test/: CMakeLists.txt  main.cpp  test_word.cpp  text_test.cpp  word_test.cpp
code/test/algo/: boyer_moore_test.cpp  boyer_mur_test.cpp  hash_eq_test.cpp  hash_mask_test.cpp  knut_morris_pratt_test.cpp  levenshtein_test.cpp
code/test/algo/hash/: hash_test.cpp
code/test/coincidence/: coincidence_test.cpp  preprocessed_coincidence_test.cpp
code/test/knuth_morris_pratt/: test_knuth_morris_pratt.h  test_prefix_fun.cpp  test_prefix_fun.h
code/test/levenshtein/: test_levenshtein.cpp  test_levenshtein.h  test_livenshtein.cpp  test_livenshtein.h
code/test/text/: grouped_text_test.cpp  test_text.cpp  test_text.h  text_test.cpp  word_test.cpp
code/test/word/: test_word.cpp  test_word.h
code/text/: Text.cpp  Text.h
code/word/: Word.cpp  Word.h
